[package]
name = "assert-token-stream"
version = "0.1.0"
edition = "2021"
authors = ["Robin Ohs <me@robinohs.dev>"]
repository = "https://github.com/robinohs/assert-token-stream"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
